--- a/html/registrarMedic.html
+++ b/html/registrarMedic.html
@@ -64,17 +64,20 @@
 
         <button type="button" id="registrar">Registrar Medicamento</button>
     </form>
+    <article id="article-tableLoadMedic">
+        <h2>Consultar Medicamentos</h2>
+        <table id="tableLoadMedic">
+            <tr id="tableHead">
+                <td>Name</td>
+                <td>NumRegistro</td>
+                <td>Categoria</td>
+                <td>Link Wikimedic</td>
+                <td>Actions</td>
+            </tr>
+        </table>
+    </article>
 
-    <h2>Consultar Medicamentos</h2>
-    <table id="tableLoadMedic">
-        <tr id="tableHead">
-            <td>Name</td>
-            <td>NumRegistro</td>
-            <td>Categoria</td>
-            <td>Link Wikimedic</td>
-            <td>Actions</td>
-        </tr>
-    </table>
+
 
     <h1>Update Medicamentos</h1>
 
