feat (registrarMedic.html): Adiciona update-superdose.

--- a/html/registrarMedic.html
+++ b/html/registrarMedic.html
@@ -125,6 +125,9 @@
         <label for="update-especiais">Especiais:</label>
         <textarea id="update-especiais" name="update-especiais" rows="4"></textarea><br>
 
+        <label for="update-superdose">Superdose:</label>
+        <textarea id="update-superdose" name="update-especiais" rows="4"></textarea><br>
+
         <button type="button" id="atualizar">Atualizar Medicamento</button>
     </form>
 
