fix: Arruma a imagem do remédios e seus links.

--- a/html/fitoterapicos.html
+++ b/html/fitoterapicos.html
@@ -93,46 +93,37 @@
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
           <div class="carousel" data-number="0">
-            <a href="" class="medicine">
+            <a
+              href="./medic.html?numRegistro=%201384100560011"
+              class="medicine"
+            >
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 3 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Alcachofra</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1039201950015" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 4 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Hedera Helix</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1958404280159" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 5 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Passiflora Incarnata</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1905600480217" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 6 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Pelargonium Sidoide</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1003801070023" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 7 bilhões de mL</figcaption>
-              </figure>
-            </a>
-            <a href="" class="medicine">
-              <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 8 bilhões de mL</figcaption>
-              </figure>
-            </a>
-            <a href="" class="medicine">
-              <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 9 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Ginkgo Bilona</figcaption>
               </figure>
             </a>
           </div>
