--- a/html/homeopaticos.html
+++ b/html/homeopaticos.html
@@ -92,10 +92,10 @@
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
           <div class="carousel" data-number="0">
-            <a href="./medic.html?numRegistro=1705600480217" class="medicine">
+            <a href="./medic.html" class="medicine">
               <figure>
                 <img src="../img/example_medic.png" />
-                <figcaption>Xarelto</figcaption>
+                <figcaption>Senku 3 bilhões de mL</figcaption>
               </figure>
             </a>
             <a href="" class="medicine">
@@ -120,18 +120,6 @@
               <figure>
                 <img src="../img/example_medic.png" />
                 <figcaption>Senku 7 bilhões de mL</figcaption>
-              </figure>
-            </a>
-            <a href="" class="medicine">
-              <figure>
-                <img src="../img/example_medic.png" />
-                <figcaption>Senku 8 bilhões de mL</figcaption>
-              </figure>
-            </a>
-            <a href="" class="medicine">
-              <figure>
-                <img src="../img/example_medic.png" />
-                <figcaption>Senku 9 bilhões de mL</figcaption>
               </figure>
             </a>
           </div>
