--- a/html/similares.html
+++ b/html/similares.html
@@ -91,46 +91,34 @@
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
           <div class="carousel" data-number="0">
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1705600480217" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 3 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Xarelto</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1008903400181" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 4 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Glifage</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1558401270040" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 5 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Neosoro</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1181903090056" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 6 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Dipirona</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1558406110025" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 7 bilhões de mL</figcaption>
-              </figure>
-            </a>
-            <a href="" class="medicine">
-              <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 8 bilhões de mL</figcaption>
-              </figure>
-            </a>
-            <a href="" class="medicine">
-              <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 9 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Ivermectina</figcaption>
               </figure>
             </a>
           </div>
