fix: Arruma a foto e link de alguns remédios.

--- a/html/alopaticos.html
+++ b/html/alopaticos.html
@@ -88,46 +88,34 @@
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
           <div class="carousel" data-number="0">
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1438101240013" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 3 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Paracetamol</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1037007570028" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 4 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Ibuprofeno</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1558401020011" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 5 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Amoxicilina</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1037003570090" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 6 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Omeprazol</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1004311370101" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 7 bilhões de mL</figcaption>
-              </figure>
-            </a>
-            <a href="" class="medicine">
-              <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 8 bilhões de mL</figcaption>
-              </figure>
-            </a>
-            <a href="" class="medicine">
-              <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 9 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Atorvastatina</figcaption>
               </figure>
             </a>
           </div>
