--- a/html/genericos.html
+++ b/html/genericos.html
@@ -61,6 +61,7 @@
         </nav>
       </div>
     </header>
+
     <main>
       <article class="header">
         <h1>GENÉRICOS</h1>
@@ -89,46 +90,34 @@
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
           <div class="carousel" data-number="0">
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1558401450103" class="medicine">
               <figure>
                 <img src="../img/senku.jpg" />
-                <figcaption>Senku 3 bilhões de mL</figcaption>
+                <figcaption>Citrato de Sildenafila</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1037006090057" class="medicine">
               <figure>
                 <img src="../img/senku.jpg" />
-                <figcaption>Senku 4 bilhões de mL</figcaption>
+                <figcaption>Hidroclorotiazida</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1008903920108" class="medicine">
               <figure>
                 <img src="../img/senku.jpg" />
-                <figcaption>Senku 5 bilhões de mL</figcaption>
+                <figcaption>Levotiroxina sódica</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1438101440128" class="medicine">
               <figure>
                 <img src="../img/senku.jpg" />
-                <figcaption>Senku 6 bilhões de mL</figcaption>
+                <figcaption>Maleato de enalapril</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1037005060073" class="medicine">
               <figure>
                 <img src="../img/senku.jpg" />
-                <figcaption>Senku 7 bilhões de mL</figcaption>
-              </figure>
-            </a>
-            <a href="" class="medicine">
-              <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 8 bilhões de mL</figcaption>
-              </figure>
-            </a>
-            <a href="" class="medicine">
-              <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 9 bilhões de mL</figcaption>
+                <figcaption>Cloridrato de metformina</figcaption>
               </figure>
             </a>
           </div>
