--- a/html/pediatria.html
+++ b/html/pediatria.html
@@ -94,46 +94,34 @@
         <div class="container">
           <span class="material-symbols-rounded" id="left">chevron_left </span>
           <div class="carousel" data-number="0">
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1384100230291" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 3 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Bronqtrat infantil</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1003800480082" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 4 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Ambrol</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1781709290027" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 5 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Buscopan pediátrico</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1123633260240" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 6 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Tylenol bebê</figcaption>
               </figure>
             </a>
-            <a href="" class="medicine">
+            <a href="./medic.html?numRegistro=1181900140011" class="medicine">
               <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 7 bilhões de mL</figcaption>
-              </figure>
-            </a>
-            <a href="" class="medicine">
-              <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 8 bilhões de mL</figcaption>
-              </figure>
-            </a>
-            <a href="" class="medicine">
-              <figure>
-                <img src="../img/senku.jpg" />
-                <figcaption>Senku 9 bilhões de mL</figcaption>
+                <img src="../img/example_medic.png" />
+                <figcaption>Multisoro infantil</figcaption>
               </figure>
             </a>
           </div>
