fix: Ajusta textos de cannabis e curiosidades

--- a/html/about_project.html
+++ b/html/about_project.html
@@ -230,16 +230,17 @@
         <h2>CURIOSIDADES</h2>
         <div>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit odio
-            provident, maxime natus eius iste soluta! Possimus dolorum, adipisci
-            libero exercitationem ipsam dolores, velit, temporibus inventore
-            excepturi hic modi assumenda!
+            Muitas pessoas tomam medicamentos homeopáticos com a ideia de que
+            eles são totalmente inofensivos. Entretanto, eles possuem princípios
+            ativos em suas formulações que, com o tempo, podem se acumular em
+            seu organismo e causar efeitos colaterais. Além da possibilidade de
+            interações medicamentosas que podem alterar o curso do tratamento.
           </p>
           <p>
-            Eaque voluptatem at sapiente. Illo aut vero earum magni fugit
-            laborum perferendis inventore nesciunt vel asperiores, quia natus
-            dolores debitis obcaecati atque fugiat, voluptatum quisquam id
-            itaque. Cupiditate, amet voluptatibus.
+            A ideia de que, quanto mais caro, melhor é o produto, está bastante
+            enraizada na mente das pessoas. Porém, as medicações possuem seus
+            similares, geralmente custando mais barato, e ao mesmo tempo, são
+            tão efetivos quanto os ditos medicamentos referência.
           </p>
         </div>
       </article>
@@ -260,10 +261,15 @@
       <article class="cannabis">
         <h2>CANNABIS SATIVA</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
-          aspernatur repellat alias, quod reprehenderit soluta eaque repudiandae
-          accusamus est cum hic adipisci quis voluptatum harum quibusdam sequi,
-          beatae ipsum dicta?
+          A Cannabis sativa é uma planta herbácea da família das Canabiáceas,
+          amplamente cultivada em muitas partes do mundo. As folhas são
+          finamente recortadas em segmentos lineares; as flores, unissexuais e
+          inconspícuas, têm pêlos granulosos que, nas femininas, segregam uma
+          resina. O caule possui fibras industrialmente importantes, conhecidas
+          como cânhamo; e a resina tem propriedades psicoativas bem documentadas
+          podendo atuar como analgésico, anódino, antiemético, antiespasmódico,
+          calmante do sistema nervoso, embriagador, estomático, narcótico,
+          sedativo, tônico
         </p>
         <a
           href="https://padlet.com/beatrizbezerra39/cannabis-sativa-4hjzzsd86eamijrl"
